<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_admin_check"
        android:title="@string/menu_sendCheck"
        android:icon="@drawable/check"
        android:orderInCategory="1"
        android:showAsAction="never" />
    <item android:id="@+id/menu_admin_warn"
        android:title="@string/menu_sendWarn"
        android:icon="@drawable/warn"
        android:orderInCategory="2"
        android:showAsAction="never" />
    <item android:id="@+id/menu_admin_deny"
        android:title="@string/menu_sendDeny"
        android:icon="@drawable/deny"
        android:orderInCategory="3"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_share"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="10"
        android:showAsAction="always" />
    <item android:id="@+id/menu_cart"
        android:title="@string/menu_cart"
        android:icon="@drawable/ic_action_cart"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/menu_favorite"
        android:title="@string/menu_favorite"
        android:icon="@drawable/ic_action_favorite"
        android:orderInCategory="200"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_note"
        android:title="@string/beerDetailNotes"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="300"
        android:showAsAction="ifRoom" />
</menu>
