<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/action_rate"
        android:icon="@drawable/ic_action_google_play_store"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/rate"/>
    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_account"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>