<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchment" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/product_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/about_versionCode"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewCopyRigts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewVersion"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/about_copyrights"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewContactHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCopyRigts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/about_contact"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewContactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewContactHeader"
        android:layout_centerHorizontal="true"
        android:autoLink="email"
        android:gravity="center"
        android:text="@string/about_contactAddress"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColorLink="#644631" />

    <LinearLayout
        android:id="@+id/seperator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/textViewContactText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#FF000000"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seperator"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/about_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>