<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchment" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/seperator1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#FF000000"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seperator1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewLoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextActivationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewLoginText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/login_activation"
                android:inputType="text" >
            </EditText>

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextActivationCode"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/login_username"
                android:inputType="text"
                android:nextFocusLeft="@+id/editTextUserName"
                android:nextFocusUp="@+id/editTextUserName" >
            </EditText>

            <Spinner
                android:id="@+id/spinnerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextUserName"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/textViewPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_privacy"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:id="@+id/seperator2"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/textViewPrivacy"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FF000000"
                android:gravity="center"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/buttonOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seperator2"
                android:layout_centerInParent="true"
                android:layout_marginBottom="12dp"
                android:text="@string/ok" >
            </Button>

            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/seperator2"
                android:layout_marginBottom="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/logout"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>