<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/buttonSearch"
        android:layout_alignTop="@+id/editTextInput"
        android:layout_marginBottom="-10dp"
        android:layout_marginTop="-24dp"
        android:contentDescription="@string/beerDetailNotes"
        android:scaleType="centerCrop"
        android:src="@drawable/parchment" />

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/menu_search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1" >

    </EditText>

    <LinearLayout
        android:id="@+id/seperator1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/editTextInput"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#FF000000"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textViewFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seperator1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/menu_filter"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FF000000"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/seperator1"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/seperator2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/spinnerFilter"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#FF000000"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textViewSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seperator2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/menu_sort"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FF000000"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/seperator2"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/seperator3"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/spinnerSort"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#FF000000"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seperator3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:minHeight="48dp"
        android:minWidth="96dp"
        android:text="@string/menu_search" />

    <requestFocus />

</RelativeLayout>